[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Sprite-Wall.png" type="Texture" id=1]
[ext_resource path="res://UI/Tetris_Board.png" type="Texture" id=2]
[ext_resource path="res://UI/Tetris_Numbers.png" type="Texture" id=3]
[ext_resource path="res://Sprites/All_Blocks.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=9]

[node name="Main" type="Node"]
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 144.0
margin_bottom = 160.0
color = Color( 0.172549, 0.129412, 0.215686, 1 )

[node name="PlayArea" type="ColorRect" parent="Background"]
margin_left = 8.0
margin_right = 88.0
margin_bottom = 160.0
color = Color( 0.631373, 0.937255, 0.54902, 1 )

[node name="ScoreBoard" type="Sprite" parent="Background"]
position = Vector2( 96, 5 )
scale = Vector2( 0.888889, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Score" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 43.875, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Score2" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 37.125, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Score3" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 30.375, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Score4" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 23.625, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Score5" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 16.875, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Score6" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 10.125, 28 )
texture = ExtResource( 3 )
hframes = 10

[node name="Lines" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 30.375, 85 )
texture = ExtResource( 3 )
hframes = 10

[node name="Lines2" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 23.625, 85 )
texture = ExtResource( 3 )
hframes = 10

[node name="Level" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 30.375, 61 )
texture = ExtResource( 3 )
hframes = 10

[node name="Level2" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 23.625, 61 )
texture = ExtResource( 3 )
hframes = 10

[node name="NextBlock" type="Sprite" parent="Background/ScoreBoard"]
position = Vector2( 29.9375, 120 )
scale = Vector2( 1.02734, 1 )
texture = ExtResource( 4 )
hframes = 7

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Walls" type="Node" parent="."]

[node name="WallLeft" type="Node" parent="Walls"]

[node name="Sprite" type="Sprite" parent="Walls/WallLeft"]
texture = ExtResource( 1 )
centered = false

[node name="Sprite2" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 6 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite3" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 12 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite4" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 18 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite5" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 24 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite6" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 30 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite7" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 36 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite8" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 42 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite9" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 48 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite10" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 54 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite11" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 60 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite12" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 66 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite13" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 72 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite14" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 78 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite15" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 84 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite16" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 90 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite17" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 96 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite18" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 102 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite19" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 108 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite20" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 114 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite21" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 120 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite22" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 126 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite23" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 132 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite24" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 138 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite25" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 144 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite26" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 150 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite27" type="Sprite" parent="Walls/WallLeft"]
position = Vector2( 0, 156 )
texture = ExtResource( 1 )
centered = false

[node name="WallRight" type="Node" parent="Walls"]

[node name="Sprite" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 0 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite2" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 6 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite3" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 12 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite4" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 18 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite5" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 24 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite6" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 30 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite7" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 36 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite8" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 42 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite9" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 48 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite10" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 54 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite11" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 60 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite12" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 66 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite13" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 72 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite14" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 78 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite15" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 84 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite16" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 90 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite17" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 96 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite18" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 102 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite19" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 108 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite20" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 114 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite21" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 120 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite22" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 126 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite23" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 132 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite24" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 138 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite25" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 144 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite26" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 150 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite27" type="Sprite" parent="Walls/WallRight"]
position = Vector2( 88, 156 )
texture = ExtResource( 1 )
centered = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
